[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/quiz/riff_editor.gd" id="1_script"]

[node name="RiffEditorRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="BackgroundDim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="RecordingOverlay" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 20.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="HBox" type="HBoxContainer" parent="RecordingOverlay"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="RecordingOverlay/HBox"]
layout_mode = 2
text = "ðŸ”´ Recording Riff..."

[node name="StopRecButton" type="Button" parent="RecordingOverlay/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Stop"

[node name="EditorPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -350.0
offset_right = 400.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="EditorPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 15.0
offset_right = 150.0
offset_bottom = 45.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
text = "Manage Riffs"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="EditorPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="LeftPane" type="VBoxContainer" parent="EditorPanel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="Label" type="Label" parent="EditorPanel/HBox/LeftPane"]
layout_mode = 2
text = "Existing Riffs"

[node name="RiffList" type="ItemList" parent="EditorPanel/HBox/LeftPane"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="RightPane" type="VBoxContainer" parent="EditorPanel/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleBox" type="VBoxContainer" parent="EditorPanel/HBox/RightPane"]
layout_mode = 2

[node name="Label" type="Label" parent="EditorPanel/HBox/RightPane/TitleBox"]
layout_mode = 2
text = "Title"

[node name="TitleInput" type="LineEdit" parent="EditorPanel/HBox/RightPane/TitleBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter Riff Name..."

[node name="NotesVisual" type="Panel" parent="EditorPanel/HBox/RightPane"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Label" type="Label" parent="EditorPanel/HBox/RightPane/NotesVisual"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "(Notes Visualization Placeholder)"

[node name="Controls" type="HBoxContainer" parent="EditorPanel/HBox/RightPane"]
layout_mode = 2
alignment = 1

[node name="RecordButton" type="Button" parent="EditorPanel/HBox/RightPane/Controls"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Record Input"

[node name="PlayButton" type="Button" parent="EditorPanel/HBox/RightPane/Controls"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Play Preview"

[node name="DeleteButton" type="Button" parent="EditorPanel/HBox/RightPane/Controls"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Delete"

[node name="Footer" type="HBoxContainer" parent="EditorPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
theme_override_constants/separation = 20

[node name="SaveButton" type="Button" parent="EditorPanel/Footer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Save"

[node name="CancelButton" type="Button" parent="EditorPanel/Footer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Cancel"

[node name="StatusLabel" type="Label" parent="EditorPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -40.0
offset_right = 400.0
offset_bottom = -10.0
grow_vertical = 0
text = "Ready."
vertical_alignment = 1
